add: working on updating folder details
